# babylon

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  README.md  docker-compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: ci-backend.yaml  ci-dummy-workflow.yaml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/migrations/: env.py
api/src/babylon/: __init__.py  main.py
api/src/babylon/domain/: __init__.py  exceptions.py
api/src/babylon/domain/entities/: __init__.py  user.py
api/src/babylon/domain/ports/: __init__.py  user_repository.py
api/src/babylon/domain/value_objects/: __init__.py  kdf_configuration.py  master_password_salt.py  server_auth_hash.py  token.py  user_id.py  username.py
api/src/babylon/infrastructure/: __init__.py
api/src/babylon/infrastructure/database/: __init__.py  base.py
api/src/babylon/infrastructure/database/models/: __init__.py
api/tests/: test_placeholder.py
api/tests/unit/domain/entities/: test_user.py
api/tests/unit/domain/value_objects/: test_kdf_configuration.py  test_master_password_salt.py  test_server_auth_hash.py  test_token.py  test_user_id.py  test_username.py
docs/adr/: ADR-001-adoption-of-zero-knowledge-architecture.md  ADR-002-adoption-of-clean-architecture-for-backend.md  ADR-003-adoption-of-python-fastapi-for-backend.md  ADR-004-adoption-of-postegreSQL-SQLAlchemy-for-database-management.md  ADR-005-adoption-of-nicknames-for-users-identification.md  ADR-005-adoption-of-usernames-for-users-identification.md  ADR-006-adoption-of-key-splitting-for-authentication-mechanism.md
