[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "granian>=2.7.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# E, F, W: Base and Warning Errors
# I: isort (Sort the import)
# B: flake8-bugbear (Finds code smells e logic bug)
# UP: pyupgrade (Modern Python syntac)
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = []

fixable = ["ALL"]

unfixable = ["B", "UP"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
